; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/uzlib/extr_uzlib_deflate.c_literal.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/uzlib/extr_uzlib_deflate.c_literal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@.str = private unnamed_addr constant [16 x i8] c"sym: %02x   %c\0A\00", align 1
@oBuf = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @literal(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = call i32 @DBG_COUNT(i32 6)
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @DBG_PRINT(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %4, i32 %5)
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @oBuf, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %1
  %12 = load i32, i32* %2, align 4
  %13 = call i32 @outBits(i32 %12, i32 8)
  br label %27

14:                                               ; preds = %1
  %15 = load i32, i32* %2, align 4
  %16 = icmp sle i32 %15, 143
  br i1 %16, label %17, label %21

17:                                               ; preds = %14
  %18 = load i32, i32* %2, align 4
  %19 = add nsw i32 48, %18
  %20 = call i32 @outBitsRev(i32 %19, i32 8)
  br label %26

21:                                               ; preds = %14
  %22 = call i32 @outBits(i32 1, i32 1)
  %23 = load i32, i32* %2, align 4
  %24 = add nsw i32 0, %23
  %25 = call i32 @outBitsRev(i32 %24, i32 8)
  br label %26

26:                                               ; preds = %21, %17
  br label %27

27:                                               ; preds = %26, %11
  ret void
}

declare dso_local i32 @DBG_COUNT(i32) #1

declare dso_local i32 @DBG_PRINT(i8*, i32, i32) #1

declare dso_local i32 @outBits(i32, i32) #1

declare dso_local i32 @outBitsRev(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
